Closed
Bug 561308
Opened 16 years ago
Closed 16 years ago
crash with wmode="direct" in gdk_x11_drawable_get_xdisplay from libflashplayer.so@0x503f9 [@ libgdk-x11-2.0.so.0.1600.6@0x4579d ][@ libgdk-x11-2.0.so.0.1800.3@0x4ff3d ][@ libgdk-x11-2.0.so.0.2000.0@0x507fd ]
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(blocking1.9.2 .4+, status1.9.2 .4-fixed, status1.9.1 unaffected)
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking1.9.2 | --- | .4+ |
| status1.9.2 | --- | .4-fixed |
| status1.9.1 | --- | unaffected |
People
(Reporter: karlt, Assigned: karlt)
References
()
Details
(4 keywords)
Crash Data
Attachments
(2 files)
|
4.00 KB,
patch
|
cjones
:
review+
christian
:
approval1.9.2.4+
|
Details | Diff | Splinter Review |
|
1.21 KB,
patch
|
Details | Diff | Splinter Review |
e.g. 3.7a5pre bp-6a9a233b-451c-4f71-81bc-021952100418
0 libgdk-x11-2.0.so.0.1600.6 libgdk-x11-2.0.so.0.1600.6@0x4579d
1 libflashplayer.so libflashplayer.so@0x503f9
2 libflashplayer.so libflashplayer.so@0x50b97
3 libflashplayer.so libflashplayer.so@0x3a17f
4 libflashplayer.so libflashplayer.so@0x3d9d9
5 libflashplayer.so libflashplayer.so@0x33570
6 libflashplayer.so libflashplayer.so@0x37da3
7 libxul.so mozilla::plugins::PluginInstanceChild::AnswerNPP_SetWindow dom/plugins/PluginInstanceChild.cpp:745
libflashplayer.so 9BC43748D925AB0C97B43BB3C7019E210
is the latest stable Flash LNX 10,0,45,2.
% objdump -d --start-address=0x503f0 libflashplayer.so --stop-address=0x503fa
503f5: e8 06 d2 fd ff call 2d600 <gdk_x11_drawable_get_xdisplay@plt>
Also libgdk-x11-2.0.so.0.2000.0@0x4e0bd bp-964d05ed-fe5f-478b-bdf8-f7e042100422
and libgdk-x11-2.0.so.0.2000.0@0x507fd bp-1e6569ca-34fb-4d7a-ac79-7163b2100422
with libflashplayer.so 9BF4278859263B0053642AE35840B3610.
Similar crashes with 3.6.4 including
libgdk-x11-2.0.so.0.1800.3@0x4ff3d bp-91879c63-f984-4680-b785-3a95d2100421
| Assignee | ||
Updated•16 years ago
|
Summary: crash in gdk_x11_drawable_get_xdisplay from libflashplayer.so@0x503f9 [@ libgdk-x11-2.0.so.0.1600.6@0x4579d][@ libgdk-x11-2.0.so.0.1800.3@0x4ff3d][@ libgdk-x11-2.0.so.0.2000.0@0x507fd] → crash in gdk_x11_drawable_get_xdisplay from libflashplayer.so@0x503f9 [@ libgdk-x11-2.0.so.0.1600.6@0x4579d ][@ libgdk-x11-2.0.so.0.1800.3@0x4ff3d ][@ libgdk-x11-2.0.so.0.2000.0@0x507fd ]
Severity: normal → critical
Component: Plug-ins → Flash (Adobe)
Product: Core → Plugins
QA Contact: plugins → adobe-flash
Version: Trunk → 10.x
Comment 1•16 years ago
|
||
I get this error every time, when I try to load any page with video from capped.tv video site. For example, http://capped.tv/1206492145-1-0 Its player worked in Firefox 3.6.3, but since 3.6.3plugin1, page shows only the "sad plugin".
bp-b2d73419-b12e-46ac-9a8b-8fd452100428
bp-2a54678d-da11-4937-9951-f8ba02100428
| Assignee | ||
Comment 2•16 years ago
|
||
Thanks, Oleg. I haven't been able to reproduce here.
Is there any console output that might help indicate the cause of the problem?
You should at least see:
(<unknown>:13618): Gdk-CRITICAL **: gdk_window_get_origin: assertion `GDK_IS_WINDOW (window)' failed
but I'm curious as to whether there are other messages.
| Assignee | ||
Comment 3•16 years ago
|
||
Reproduced here with x86_32 Shockwave Flash 10.0 r45
(but not x86_32 10.1 d51 nor x86_64 10.0 r45).
(<unknown>:7602): Gdk-WARNING **: /build/buildd/gtk+2.0-2.14.4/gdk/x11/gdkdrawable-x11.c:822 drawable is not a pixmap or window
#5 <signal handler called>
#6 IA__gdk_x11_drawable_get_xdisplay (drawable=0x0)
at /build/buildd/gtk+2.0-2.14.4/gdk/x11/gdkdrawable-x11.c:856
#7 0xb01873fa in ?? () from /home/karl/.mozilla/plugins/libflashplayer.so
#8 0xb0187b98 in ?? () from /home/karl/.mozilla/plugins/libflashplayer.so
#9 0xb0171180 in ?? () from /home/karl/.mozilla/plugins/libflashplayer.so
#10 0xb01749da in ?? () from /home/karl/.mozilla/plugins/libflashplayer.so
#11 0xb016a571 in ?? () from /home/karl/.mozilla/plugins/libflashplayer.so
#12 0xb016eda4 in ?? () from /home/karl/.mozilla/plugins/libflashplayer.so
#13 0xb7618434 in mozilla::plugins::PluginInstanceChild::AnswerNPP_SetWindow (
this=0x93c37c8, aWindow=@0xb4d67c08, rv=0xb4d67d0c)
at /home/karl/moz/dev/dom/plugins/PluginInstanceChild.cpp:564
| Assignee | ||
Updated•16 years ago
|
Assignee: nobody → karlt
| Assignee | ||
Updated•16 years ago
|
| Assignee | ||
Updated•16 years ago
|
Summary: crash in gdk_x11_drawable_get_xdisplay from libflashplayer.so@0x503f9 [@ libgdk-x11-2.0.so.0.1600.6@0x4579d ][@ libgdk-x11-2.0.so.0.1800.3@0x4ff3d ][@ libgdk-x11-2.0.so.0.2000.0@0x507fd ] → crash with wmode="direct" in gdk_x11_drawable_get_xdisplay from libflashplayer.so@0x503f9 [@ libgdk-x11-2.0.so.0.1600.6@0x4579d ][@ libgdk-x11-2.0.so.0.1800.3@0x4ff3d ][@ libgdk-x11-2.0.so.0.2000.0@0x507fd ]
| Assignee | ||
Updated•16 years ago
|
Component: Flash (Adobe) → Plug-ins
Keywords: regression
Product: Plugins → Core
QA Contact: adobe-flash → plugins
Version: 10.x → Trunk
| Assignee | ||
Comment 4•16 years ago
|
||
This seems to affect all instances with wmode="direct" and the most recent stable Flash Player, though I haven't been able to test turning off hardware accel.
"In Flash Player 9 Update 3, the first hardware acceleration capabilities were added to Flash Player through hardware-scaled full screen. In Flash Player 10, the same performance gains will be delivered to the browser window through new hardware-based WMODE HTML parameters. The direct WMODE will use your video card to paint pixels to the screen as fast as possible while freeing up your CPU to work on other tasks. The GPU mode works with newer video cards to do much more of the work of transformation and compositing on the video card"
http://www.adobe.com/devnet/logged_in/jchurch_flashplayer10.html
blocking1.9.2: --- → ?
status1.9.2:
--- → ?
| Assignee | ||
Comment 5•16 years ago
|
||
It seems this happens only on systems where Flash Player finds a libGL.so.1 that it thinks is suitable. This usually 'requires that the client glx vendor string be something besides "SGI"' (which I think is approximately equal to non-free implementations).
http://blogs.adobe.com/penguin.swf/2008/05/flash_uses_the_gpu.html
but also allows an override.
http://blogs.adobe.com/penguin.swf/2008/08/secrets_of_the_mmscfg_file_1.html
| Assignee | ||
Comment 6•16 years ago
|
||
In response to the first NPP_SetWindow, the plugin makes these calls
gtk_plug_new(73401276) = 0xb4125830
gtk_drawing_area_new() = 0xb410c440
gtk_object_get_type() = 3021368480
gtk_widget_get_type() = 3021368576
g_type_check_instance_cast(0xb410c440, 3021368576) = 0xb410c440
g_type_check_instance_cast(0xb410c440, 3021368480) = 0xb410c440
gtk_container_get_type() = 3021301440
g_type_check_instance_cast(0xb4125830, 3021301440) = 0xb4125830
gtk_container_add(0xb4125830, 0xb410c440) = <void>
gtk_widget_add_events(0xb410c440, 2125582) = <void>
g_type_check_instance_cast(0xb410c440, 80) = 0xb410c440
g_signal_connect_data(0xb410c440, "event", 0xb7634ce0, 0xb3101000, NULL, 0) = 10
... some other stuff including opening libGL.so.1 ... then
gdk_x11_drawable_get_xdisplay(NULL)
Comparing in-process behavior, the GdkWindow being passed to
gdk_x11_drawable_get_xdisplay comes from the window of the GtkPlug. A
subsequent gdk_x11_drawable_get_xdisplay call passes the window of the
GtkDrawingArea.
The GtkPlug is not explicitly realized before its window is used.
As discussed in bug 539138 comment 1, the behavior of GtkPlug differs when
in-process or out-of-process. In-process, the GtkPlug is realized on
connection to the GtkSocket during construction, but this does not happen out
of process, so the window is NULL.
| Assignee | ||
Comment 7•16 years ago
|
||
Attachment #442366 -
Flags: review?(jones.chris.g)
| Assignee | ||
Comment 8•16 years ago
|
||
Causes failure in these tests (at least):
modules/plugin/test/crashtests/539897-1.html
modules/plugin/test/mochitest/test_GCrace.html
modules/plugin/test/mochitest/test_propertyAndMethod.html
| Assignee | ||
Comment 9•16 years ago
|
||
There are trunk builds here with this patch if anyone else would like to verify the fix:
https://build.mozilla.org/tryserver-builds/ktomlinson@mozilla.com-try-3f1e5e083798/
| Assignee | ||
Comment 10•16 years ago
|
||
(In reply to comment #4)
> though I haven't been able to test turning off hardware accel.
FWIW disabling hardware acceleration from the context menu of a wmode=window plugin does work around this.
Comment 11•16 years ago
|
||
(In reply to comment #9)
> There are trunk builds here with this patch if anyone else would like to verify
> the fix:
>
> https://build.mozilla.org/tryserver-builds/ktomlinson@mozilla.com-try-3f1e5e083798/
WFM with this build, thank you.
Comment 12•16 years ago
|
||
Setting as blocking for 1.9.2. We'll want this landed on both mozilla-1.9.2 default and GECKO1924_20100413_RELBRANCH ASAP. We would like to build today, the sooner the better.
Comment 13•16 years ago
|
||
Comment on attachment 442366 [details] [diff] [review]
Realize GtkPlugs when associated with a socket for consistency with in-process behavior
a=LegNeato for 1.9.2 (preapproving to move this along quickly)
Attachment #442366 -
Flags: approval1.9.2.4+
Updated•16 years ago
|
Attachment #442366 -
Flags: review?(jones.chris.g) → review+
http://hg.mozilla.org/mozilla-central/rev/fa7854ba814b
http://hg.mozilla.org/mozilla-central/rev/779bca481e9e
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Comment 16•16 years ago
|
||
Thanks for the quick turnaround the landing!
Comment 17•16 years ago
|
||
(In reply to comment #11)
> (In reply to comment #9)
> > There are trunk builds here with this patch if anyone else would like to verify
> > the fix:
> >
> > https://build.mozilla.org/tryserver-builds/ktomlinson@mozilla.com-try-3f1e5e083798/
>
> WFM with this build, thank you.
Oleg, can you try with the latest 1.9.2 nightly from http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-mozilla-1.9.2/. I'd like to verify that it is fixed in the 1.9.2 builds as well and I don't have the right hardware to test this bug.
Comment 18•16 years ago
|
||
(In reply to comment #17)
> Oleg, can you try with the latest 1.9.2 nightly from
> http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-mozilla-1.9.2/.
> I'd like to verify that it is fixed in the 1.9.2 builds as well and I don't
> have the right hardware to test this bug.
Yes, this build works w/o crash, too.
Comment 19•16 years ago
|
||
Thank you, Oleg. I appreciate the help. Marking verified for 1.9.2.
Keywords: verified1.9.2
Updated•14 years ago
|
Crash Signature: [@ libgdk-x11-2.0.so.0.1600.6@0x4579d ]
[@ libgdk-x11-2.0.so.0.1800.3@0x4ff3d ]
[@ libgdk-x11-2.0.so.0.2000.0@0x507fd ]
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•