b=561308,539138 Realize GtkPlugs when associated with a socket for consistency with in-process behavior r=cjones